# SaoPauloBrazilChapter_BrazilianSignLanguage

./: .gitattributes  .gitignore  Dockerfile  PREPROCESSING_STEPS.md  README.md  STRUCTURE.md  colab_requirements.txt  pyproject.toml
.dvc/: config
.github/workflows/: sync.yml
code/: 1_Video_Scraping.ipynb  2_Preprocess_Data.ipynb  3_Run_Model_Experiment.ipynb  4_Report_Visualizations.ipynb  __init__.py
code/data/: Dicionario_Metadata.csv  INES_Metadata.csv  INES_Scraping.ipynb  Signbank_Scraping.py  UVF_Scraping.ipynb  V-Librasil_Scraping.py  download_google_drive_data.ipynb  download_videos.py  metadata.ipynb  raw_metadata.ipynb  scrapping.py  video_scraping.ipynb
code/eda/: Analyzed_Videos_EDA_v2.ipynb  __init__.py  report.py
code/model/: __init__.py  inference.py  trainer.py
code/model/configs/: train_config.yaml
code/model/dataset/: augmentations.py  dataloader_functions.py  frame_sampling.py  landmark_dataset.py  prepare_data.py
code/model/devtests/: test_config.py  test_data_csv.py  test_estimators.py
code/model/features/: angles_estimator.py  base_estimator.py  differences_frame2frame_estimator.py  distances_estimator.py  experimental_features_estimator.py  feature_processor.py  features_analysis.py
code/model/models/: knn_classifier.py  transformers.py
code/model/utils/: __init__.py  analyze_runs.py  evaluate.py  inference.py  inference_then_evaluate.py  logging.py  path_utils.py  train.py  utils.py
code/model/visualization/: AnalyzeRuns.ipynb  TrainingResults.ipynb  utils2d.py  utils3d.py
code/models/landmark/: README.md  trainer.py  utils.py
code/preprocess/: Analyzed_Videos_EDA.ipynb  Analyzed_Videos_EDA_v2.ipynb  Initial_Cleaning.ipynb  MEDIAPIPE_INFO.md  Mediapipe_Holistic.ipynb  PREPROCESSING_STEPS.md  Preprocessed_Data_EDA_v2.ipynb  Preprocessed_Data_EDA_v3.ipynb  Preprocessing.ipynb  Preprocessing_Demo.ipynb  Preprocessing_Demo_v3.ipynb  Raw_Videos_EDA.ipynb  Video_Preprocessing.ipynb  Video_Preprocessing_Demo.ipynb  mediapipe_holistic.ipynb  mediapipe_holistic.py  motion_detection.ipynb  motion_detection.py  preprocessor.py  video_analyzer.py  video_data_EDA.ipynb  video_preprocessing.ipynb  video_preprocessing.py  vizualisation.py
data/: DATA_INFORMATION.md  README.md
data/interim/: best_candidates.txt  target_words.txt  word_candidates.txt
data/preprocessed/: landmarks_metadata_v3.csv  landmarks_metadata_v3_training.csv  landmarks_metadata_v4.csv  preprocessed_metadata_v1.csv  preprocessed_metadata_v2.csv  video_metadata_v3.csv  video_metadata_v4.csv
data/raw/: selected_video_variants-d-e.json  selected_video_variants-m-n.json  selected_video_variants-o.json  selected_video_variants-p.json  selected_video_variants-t-u.json  selected_video_variants.json
data/raw/INES/: INES_Metadata.csv  extra_info.csv  metadata.csv  video_file_exists.csv
data/raw/SignBank/: clean_full_metadata_SignBank.csv  metadata.csv
data/raw/UFV/: UVF_Metadata.csv  UVF_Metadata_1.csv  UVF_Metadata_2.csv  UVF_Metadata_3.csv  UVF_Metadata_4.csv  UVF_Metadata_5.csv  UVF_Metadata_6.csv  UVF_Metadata_7.csv  UVF_Metadata_8.csv  metadata.csv
data/raw/V-Librasil/: metadata.csv
docs/: Gemfile  README.md  _config.yml  config_gitbook.yml  index.md  index_minima.md
docs/_pages/: project-page.md  project-report.md
notebooks/: data-exploration.ipynb  vocabulary-building.ipynb
webapp/backend/: .gitattributes  .gitignore  README.md  config.py  dependencies.py  extract_thumbnails.py  main.py  process_video_ben.py  requirements.txt  schemas.py  sync_code.py  test_process_video.ipynb
webapp/frontend/: Dockerfile  package-lock.json  package.json
(+153 files in other folders)
