[project]
name = "SaoPauloBrazilChapter_BrazilianSignLanguage"
version = "0.1.0"
description = "Brazilian Sign Language Recognition using Deep Learning"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }

# Core dependencies
dependencies = [
    "dvc",        # for data version control
    "mlflow",     # for experiment tracking
    "numpy",
    "pandas",
    "requests",
    "jupyter",
]

[project.optional-dependencies]
# Dependencies for data collection, cleaning, and preprocessing
data = [
    "opencv-python",
    "scikit-learn",  # for data preprocessing
]

# Dependencies for model development and training
model = [
    "tensorflow",
    "tensorboard",   # for training visualization
    "mediapipe",     # for landmark detection
]

# Dependencies for web application development
app = [
    "fastapi[standard]",
    "uvicorn",
    "pydantic",
]


# All dependencies combined
all = [
    "SaoPauloBrazilChapter_BrazilianSignLanguage[data]",
    "SaoPauloBrazilChapter_BrazilianSignLanguage[model]",
    "SaoPauloBrazilChapter_BrazilianSignLanguage[app]",
]