[project]
name = "SaoPauloBrazilChapter_BrazilianSignLanguage"
version = "0.1.0"
description = "Brazilian Sign Language Recognition using Deep Learning"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }

# Core dependencies
dependencies = [
    "numpy",
    "pandas",
    "requests",
    "jupyter",
    "selenium>=4.29.0",
    "tqdm>=4.67.1",
    "aiohttp>=3.11.13",
    "opencv-python>=4.11.0.86",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "mediapipe>=0.10.21",
    "unidecode>=1.3.8",
]

[project.optional-dependencies]
# Dependencies for data collection, cleaning, and preprocessing
data = [
    "aiohttp>=3.11.13",
    "beautifulsoup4>=4.13.3",
    "opencv-python",
    "scikit-learn", # for data preprocessing
]

# Dependencies for model development and training
model = [
    "tensorflow",
    "tensorboard",   # for training visualization
    "mediapipe",     # for landmark detection
    "torch>=2.6.0"
]

# Dependencies for web application development
app = [
    "fastapi[standard]",
    "uvicorn",
    "pydantic",
]


# All dependencies combined
all = [
    "SaoPauloBrazilChapter_BrazilianSignLanguage[data]",
    "SaoPauloBrazilChapter_BrazilianSignLanguage[model]",
    "SaoPauloBrazilChapter_BrazilianSignLanguage[app]",
]
